Style theme homepage portal

--- a/bootstrap/stylesheets/bootstrap/_portal-homepage.scss
+++ b/bootstrap/stylesheets/bootstrap/_portal-homepage.scss
@@ -1,39 +1,5 @@
-// COMPILE SASS FILE
-// sass --watch bootstrap.scss:../../../css/styles.css
-
 /*******************************************
-	VARIABLES COLOR
- *******************************************/
-
-$gold: #cfb067;
-$green: #18bc9c;
-$blue: #2c3e50;
-
-$cornell-red: #b31b1b;
-
-$btn-link-background: #cfb067;
-$btn-link-text: #000;
-$btn-link-hover: #717a41;
-
-$link-text: #cfb067;
-$link-text-hover: #717a41;
-
-$border-collections: #e7d8b4;
-$border-feature: #e5e5e6;
-$border-news: #e5e5e6;
-$border-news-image: #d1dcde;
-$border-feature-image: #d1dcde;
-
-$header-text: #cfb067;
-$body-text: #535562;
-
-$footer-shape: #f6f7f4;
-$footer-link: #535562;
-$footer-active: #999ea3;
-$footer-hover: #999ea3;
-
-/*******************************************
-	RESETS
+    RESETS
  *******************************************/
 
 body {
@@ -46,6 +12,7 @@ body {
         background-color: #e3e3e3;
     }
 }*/
+
 a {
     color: $btn-link-text;
     &:hover {
@@ -106,7 +73,7 @@ a:hover {
 
 
 /*******************************************
-	RESPONSIVE NAVIGATION
+    RESPONSIVE NAVIGATION
  *******************************************/
 
 a.search-icon.show-hide-search {
@@ -355,10 +322,8 @@ a.show-hide-search {
         }
     }
 }
-
-
 /*******************************************
-	MOBILE NAV 
+    MOBILE NAV 
  *******************************************/
 
 .home,
@@ -407,7 +372,7 @@ a.show-hide-search {
 
 
 /*******************************************
-	SEARCH PORTAL AND COLLECTIONS HOMEPAGES
+    SEARCH PORTAL AND COLLECTIONS HOMEPAGES
  *******************************************/
 
 .search-home {
@@ -428,10 +393,9 @@ a.show-hide-search {
             opacity: .5;
         }
     }
-    
     .filtered-search {
         font-size: 16px;
-        color: #2c3235;
+        color: $body-text;
         position: relative;
         .search-homepage {
             float: left;
@@ -460,13 +424,13 @@ a.show-hide-search {
                 display: none;
             }
             .glyphicon-chevron-down {
-                color: #1ebae1;
+                color: $link-text;
                 font-size: 25px;
                 line-height: 51px;
                 padding-left: 10px;
             }
             .glyphicon-chevron-up {
-                color: #1ebae1;
+                color: $link-text;
                 font-size: 25px;
                 line-height: 51px;
                 padding-left: 10px;
@@ -501,6 +465,9 @@ a.show-hide-search {
                 line-height: 51px;
                 border-bottom: 1px solid #d6d6d6;
                 font-size: 16px;
+                a {
+                    color: $link-text;
+                }
             }
         }
         .submit-search {
@@ -519,8 +486,9 @@ a.show-hide-search {
     }
 }
 
+
 /*******************************************
-	SEARCH INTERIOR PAGES
+    SEARCH INTERIOR PAGES
  *******************************************/
 
 .search-slider {
@@ -659,39 +627,13 @@ a.show-hide-search {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*******************************************
-	USER TOOLS PORTAL PAGE
+    USER TOOLS PORTAL PAGE
  *******************************************/
 
 .help {
     position: absolute;
-    background-color: #fff;
+    background-color: $btn-link-background;
     width: 60px;
     height: 30px;
     top: 0;
@@ -713,9 +655,11 @@ a.show-hide-search {
     font-size: 28px;
     a {
         color: #fff;
+        &:hover {
+            opacity: .5;
+        }
     }
 }
-
 //HEADER BG
 .front .home {
     //height: 450px;
@@ -723,13 +667,11 @@ a.show-hide-search {
     background-position: left top;
     background-repeat: no-repeat;
     //background-image: url("../images/bg-interior-motif.png");
-    //background-size: 	cover;
+    //background-size:  cover;
     background-color: $blue;
     position: relative;
 }
-
 // ORGANIZE
-
 //HEADER BG
 .not-front .interior {
     height: 180px;
@@ -743,7 +685,6 @@ a.show-hide-search {
     background-image: url("../images/bg-interior-motif.png"), url("../images/bg-interior.png");
     background-size: cover, cover;
 }
-
 // ORGANIZE
 // BG for header in interior pages
 .not-front {
@@ -754,8 +695,6 @@ a.show-hide-search {
     background-image: url("../images/motif-1.svg");
     background-size: 40%;
 }
-
-
 .corner-hero {
     position: absolute;
     bottom: -1px;
@@ -786,8 +725,9 @@ a.show-hide-search {
     border-top-left-radius: 10px;
 }
 
+
 /*******************************************
-	COLLECTIONS PORTAL PAGE
+    COLLECTIONS PORTAL PAGE
  *******************************************/
 
 .collections {
@@ -795,7 +735,7 @@ a.show-hide-search {
     height: auto;
     background-color: $btn-link-background;
     .collection {
-    	margin-left: 0;
+        margin-left: 0;
         padding-left: 40px;
         padding-right: 40px;
         margin-top: 10px;
@@ -827,9 +767,8 @@ a.show-hide-search {
     }
     .collection:last-child {}
 }
-
 /*******************************************
-	FEATURES PORTAL PAGE
+    FEATURES PORTAL PAGE
  *******************************************/
 
 .features {
@@ -871,8 +810,9 @@ a.show-hide-search {
     }
 }
 
+
 /*******************************************
-	NEWS PORTAL PAGE
+    NEWS PORTAL PAGE
  *******************************************/
 
 .news {
@@ -890,8 +830,8 @@ a.show-hide-search {
         border-left: none;
         padding-bottom: 20px;
         &:last-child {
-        	border-bottom: none;
-       	}
+            border-bottom: none;
+        }
         h6 {
             font-size: 26px;
             padding-bottom: 0;
@@ -919,7 +859,7 @@ a.show-hide-search {
 
 
 /*******************************************
-	FOOTER
+    FOOTER
  *******************************************/
 
 .ac {
@@ -940,6 +880,9 @@ a.show-hide-search {
                 font-size: 18px;
                 a {
                     color: $footer-link;
+                    &:hover {
+                        color: $footer-hover;
+                    }
                     &.active {
                         color: $footer-active
                     }
@@ -955,6 +898,9 @@ a.show-hide-search {
             color: #474f57;
             font-size: 30px;
             padding-right: 5px;
+            &:hover {
+                opacity: .5;
+            }
         }
     }
 }
@@ -970,6 +916,9 @@ a.show-hide-search {
         padding-bottom: 40px;
         a {
             color: $footer-link;
+            &:hover {
+                color: $footer-hover;
+            }
         }
     }
     nav {
@@ -993,33 +942,19 @@ a.show-hide-search {
         }
     }
     .btn-give {
-        background-color: $footer-shape;
+        background-color: $footer-shape-btn;
         color: #fff !important;
         padding: 8px 20px;
         position: absolute;
         top: 0;
         left: 30px;
-        width: 221px;
+        width: 200px;
     }
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*******************************************
-	INTERIOR PAGES
+    INTERIOR PAGES
  *******************************************/
 
 .page-content {
@@ -1116,30 +1051,29 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 */
 
 @media (min-width: 480px) {
-	body {
-		border: 2px solid yellow;
-	}
-	.front .home {
-		height: 330px;
-	}
-	.search-home {
+    body {
+        //border: 2px solid yellow;
+    }
+    .front .home {
+        height: 330px;
+    }
+    .search-home {
         position: absolute;
         top: 120px
     }
-} 
+}
 @media (min-width: 533px) {
-	.corner-hero {
-		display: block;
-	}
+    .corner-hero {
+        display: block;
+    }
 }
 @media (min-width: 640px) {
-	body {
-		border: 2px solid blue;
-	}
-	.help {
-		display: block;
-	}
-
+    body {
+        //border: 2px solid blue;
+    }
+    .help {
+        display: block;
+    }
     a.search-icon.show-hide-search {
         display: none;
     }
@@ -1196,6 +1130,11 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
                 display: none;
                 width: 190px;
                 text-align: left;
+                li {
+                    a {
+                        color: $link-text;
+                    }
+                }
             }
             .submit-search {}
         }
@@ -1224,49 +1163,51 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     }
     .collection,
     .feature {
-    	.img-responsive {
-    		width: 80%;
-    	}
+        .img-responsive {
+            width: 80%;
+        }
     }
     #nav {
-    	padding-left: 30px;
+        padding-left: 30px;
     }
     .search-home {
-    	padding-left: 40px;
+        padding-left: 40px;
     }
 }
+
+
 /*
  _____      _     _      _       
 /__   \__ _| |__ | | ___| |_ ___ 
   / /\/ _` | '_ \| |/ _ \ __/ __|
  / / | (_| | |_) | |  __/ |_\__ \
  \/   \__,_|_.__/|_|\___|\__|___/
-								 
+                                 
 */
 /* Small devices (tablets, 768px and up) */
 
 @media (min-width: 768px) {
-	body {
-		border: 2px solid green;
-	}
-	.collections {
-		.collection {
-			//border-right: 1px solid rgba(255, 255, 255, .4);
-			border-bottom: none;
-		}
-	}
-	.collection,
+    body {
+        //border: 2px solid green;
+    }
+    .collections {
+        .collection {
+            //border-right: 1px solid rgba(255, 255, 255, .4);
+            border-bottom: none;
+        }
+    }
+    .collection,
     .feature {
-    	.img-responsive {
-    		width: 100%;
-    	}
+        .img-responsive {
+            width: 100%;
+        }
     }
     #nav {
         top: 0;
         padding-left: 170px;
     }
     .search-home {
-    	top: 220px;
+        top: 220px;
         padding-left: 180px;
     }
     .btn-link {
@@ -1281,41 +1222,45 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     }
     .features,
     .news {
-    	display: flex;
+        display: flex;
     }
     .feature,
     .new {
-    	flex: 1;
+        flex: 1;
     }
     .news {
-    	.new {
-	        &:last-child {
-	        	border-bottom: 1px solid $border-news;
-	       	}
-    	}
+        .new {
+            &:last-child {
+                border-bottom: 1px solid $border-news;
+            }
+            padding-top: 45px;
+            &:first-child {
+                padding-top: 0;
+            }
+        }
     }
 }
 
+
 /*  
-	___          _    _              
+    ___          _    _              
    /   \___  ___| | _| |_ ___  _ __  
   / /\ / _ \/ __| |/ / __/ _ \| '_ \ 
  / /_//  __/\__ \   <| || (_) | |_) |
 /___,' \___||___/_|\_\\__\___/| .__/ 
-							  |_|    
+                              |_|    
  */
-
 /* Medium devices (desktops, 992px and up) */
 
 @media (min-width: 992px) {
-	body {
-		border: 2px solid pink;
-	}
+    body {
+        //border: 2px solid pink;
+    }
     .collection,
     .feature {
-    	.img-responsive {
-    		width: auto;
-    	}
+        .img-responsive {
+            width: auto;
+        }
     }
     .page-content {
         .side-nav {
@@ -1392,31 +1337,33 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
         }
     }
 }
+
+
 /*
    __                           ___          _    _              
   / /  __ _ _ __ __ _  ___     /   \___  ___| | _| |_ ___  _ __  
  / /  / _` | '__/ _` |/ _ \   / /\ / _ \/ __| |/ / __/ _ \| '_ \ 
 / /__| (_| | | | (_| |  __/  / /_//  __/\__ \   <| || (_) | |_) |
 \____/\__,_|_|  \__, |\___| /___,' \___||___/_|\_\\__\___/| .__/ 
-				|___/                                     |_|    
+                |___/                                     |_|    
 */
 /* Large devices (large desktops, 1200px and up) */
 
 @media (min-width: 1440px) {
-	body {
-		border: 3px solid red;
-	}
-	.features,
+    body {
+        //border: 3px solid red;
+    }
+    .features,
     .news {
         width: 1300px;
         margin: 40px auto;
     }
     .collections {
-    	.collection {
-    		img {
-    			width: 140%;
-    		}
-    	}
+        .collection {
+            img {
+                width: 140%;
+            }
+        }
     }
     .page-content {
         width: 1300px;
