--- a/css/homepage-japan.css
+++ b/css/homepage-japan.css
@@ -1093,4 +1093,4 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     left: initial;
     right: 20px; } }
 
-/*# sourceMappingURL=portal.css.map */
+/*# sourceMappingURL=homepage-japan.css.map */
