Add other collections homepages

--- a/css/homepage-china.css
+++ b/css/homepage-china.css
@@ -1129,4 +1129,4 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     left: initial;
     right: 20px; } }
 
-/*# sourceMappingURL=portal.css.map */
+/*# sourceMappingURL=homepage-china.css.map */
