--- a/bootstrap/stylesheets/bootstrap/_homepages.scss
+++ b/bootstrap/stylesheets/bootstrap/_homepages.scss
@@ -1,3 +1,9 @@
+//COMPILE SASS FILE ASIA LIBRARY THEME
+//sass --watch bootstrap.scss:../../../css/bootstrap.css portal.scss:../../../css/portal.css homepage-japan.scss:../../../css/homepage-japan.css  homepage-korea.scss:../../../css/homepage-korea.css homepage-china.scss:../../../css/homepage-china.css
+
+
+
+
 /*******************************************
     RESETS
  *******************************************/
@@ -333,10 +339,28 @@ a.show-hide-search {
         }
     }
 }
+
+
 /*******************************************
     MOBILE NAV 
  *******************************************/
 
+.asia-collection .home,
+.asia-collection .interior {
+    .CUL-branding {
+        svg {
+            display: none;
+            width: auto;
+            height: 100px;
+        }
+    }
+}
+
+.asia-collection {
+    .search-home {
+        top: 200px;
+    }
+}
 .home,
 .interior {
     .CUL-branding-mobile {
@@ -1054,6 +1078,11 @@ a.show-hide-search {
     }
 }
 
+.asia-collection {
+    .ac {
+        margin-top: 50px;
+    }
+}
 
 /* Extra small devices (phones, up to 480px) */
 /* No media query since this is the default in Bootstrap */
@@ -1068,7 +1097,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 @media (min-width: 480px) {
     body {
-        //border: 2px solid yellow;
+        border: 2px solid yellow;
     }
     .front .home {
         height: 330px;
@@ -1076,6 +1105,12 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     .search-home {
         position: absolute;
         top: 120px
+    }
+
+    .asia-collection {
+        .search-home {
+            top: 160px;
+        }
     }
 }
 @media (min-width: 533px) {
@@ -1085,7 +1120,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 }
 @media (min-width: 640px) {
     body {
-        //border: 2px solid blue;
+        border: 2px solid blue;
     }
     .help {
         display: block;
@@ -1192,6 +1227,12 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     .home h3 {
         //left: 40px;
     }
+    .asia-collection {
+
+        .search-home {
+            top: 240px;
+        }
+    }
 }
 
 
@@ -1207,7 +1248,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 @media (min-width: 768px) {
     body {
-        //border: 2px solid green;
+        border: 2px solid green;
     }
     .collections {
         .collection {
@@ -1256,6 +1297,26 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
             &:first-child {
                 padding-top: 0;
             }
+        }
+    }
+
+    #nav.collection {
+        padding-left: 97px;
+    }
+
+    //180
+
+    .asia-collection {
+
+        .search-home {
+            padding-left: 110px;
+        }
+    }
+
+    .asia-collection {
+
+        .search-home {
+            top: 200px;
         }
     }
 }
