--- a/css/homepage-japan.css
+++ b/css/homepage-japan.css
@@ -558,6 +558,7 @@ a.show-hide-search {
   height: 370px;
   background-position: left top;
   background-repeat: no-repeat;
+  background-size: cover;
   background-color: #2c3e50;
   position: relative; }
 
@@ -854,9 +855,6 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 */
 @media (min-width: 480px) {
-  body {
-    border: 2px solid yellow; }
-
   .front .home {
     height: 330px; }
 
@@ -870,9 +868,6 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
   .corner-hero {
     display: block; } }
 @media (min-width: 640px) {
-  body {
-    border: 2px solid blue; }
-
   .help {
     display: block; }
 
@@ -963,9 +958,6 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 */
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  body {
-    border: 2px solid green; }
-
   .collections .collection {
     border-bottom: none; }
 
