--- a/bootstrap/stylesheets/bootstrap/_homepages.scss
+++ b/bootstrap/stylesheets/bootstrap/_homepages.scss
@@ -360,6 +360,7 @@ a.show-hide-search {
 }
 .home,
 .interior {
+    position: relative;
     .CUL-branding-mobile {
         width: 100%;
         height: 45px;
@@ -716,8 +717,8 @@ a.show-hide-search {
     background-position: left top, left top;
     background-repeat: no-repeat, no-repeat;
     // Image from top to bottom
-    background-image: url("../images/bg-interior-motif.png"), url("../images/bg-interior.png");
-    background-size: cover, cover;
+    background-image: url("../images/homepage-bg-hero.png");
+    background-size: cover;
 }
 
 // ORGANIZE
@@ -731,6 +732,19 @@ a.show-hide-search {
     background-size: 40%;
 }
 .corner-hero {
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+    color: #fff;
+    text-align: center;
+    padding-top: 5px;
+    display: block;
+    height: 175px;
+    width: auto;
+    color: #fff;
+    display: none;
+}
+.corner-hero-interior {
     position: absolute;
     bottom: -1px;
     right: 0;
@@ -1114,7 +1128,8 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     }
 }
 @media (min-width: 533px) {
-    .corner-hero {
+    .corner-hero,
+    .corner-hero-interior {
         display: block;
     }
 }
