--- a/css/homepage-china.css
+++ b/css/homepage-china.css
@@ -562,21 +562,7 @@ a.show-hide-search {
   background-position: left top;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #2c3e50;
   position: relative; }
-
-.not-front .interior {
-  height: 180px;
-  background-position: left top, left top;
-  background-repeat: no-repeat, no-repeat;
-  background-image: url("../images/homepage-bg-hero.png");
-  background-size: cover; }
-
-.not-front {
-  background-position: right 400px;
-  background-repeat: no-repeat;
-  background-image: url("../images/motif-1.svg");
-  background-size: 40%; }
 
 .corner-hero {
   position: absolute;
@@ -590,6 +576,13 @@ a.show-hide-search {
   width: auto;
   color: #fff;
   display: none; }
+
+.not-front .interior {
+  background-position: left -200px;
+  background-repeat: no-repeat;
+  position: relative;
+  height: auto;
+  padding-bottom: 20px; }
 
 .corner-hero-interior {
   position: absolute;
@@ -797,6 +790,13 @@ a.show-hide-search {
 /*******************************************
     INTERIOR PAGES
  *******************************************/
+.sub-section {
+  background-color: #cfb067;
+  padding: 10px 10px 10px 15px; }
+  .sub-section h3 {
+    color: #fff;
+    margin-bottom: 0; }
+
 .page-content .content-item {
   padding-right: 50px;
   padding-bottom: 40px;
