--- a/bootstrap/stylesheets/bootstrap/_korea-collection-colors.scss
+++ b/bootstrap/stylesheets/bootstrap/_korea-collection-colors.scss
@@ -26,3 +26,6 @@ $footer-shape-btn: #535562;
 $footer-link: #535562;
 $footer-active: #999ea3;
 $footer-hover: #999ea3;
+
+$btn-link-text-interior: #cfb067;
+$btn-link-text-interior-hover: #cfb067;
