--- a/bootstrap/stylesheets/bootstrap/_asia.scss
+++ b/bootstrap/stylesheets/bootstrap/_asia.scss
@@ -1,6 +1,3 @@
-//COMPILE SASS FILE ASIA LIBRARY THEME
-//sass --watch bootstrap.scss:../../../css/bootstrap.css portal.scss:../../../css/portal.css homepage-japan.scss:../../../css/homepage-japan.css  homepage-korea.scss:../../../css/homepage-korea.css homepage-china.scss:../../../css/homepage-china.css homepage-south.scss:../../../css/homepage-south.css homepage-southeast.scss:../../../css/homepage-southeast.css
-
 /*******************************************
     RESETS
  *******************************************/
@@ -718,9 +715,9 @@ a.show-hide-search {
 }
 
 .not-front .interior {
-    background-position: left -200px;
+    background-position: left 0;
     background-repeat: no-repeat;
-    //background-size: cover;
+    background-size: cover;
     position: relative;
     height: auto;
     padding-bottom: 20px;
@@ -1130,7 +1127,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 @media (min-width: 480px) {
     body {
-        border: 2px solid yellow;
+        //border: 2px solid yellow;
     }
     .front .home {
         height: 330px;
@@ -1154,7 +1151,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 }
 @media (min-width: 640px) {
     body {
-        border: 2px solid blue;
+        //border: 2px solid blue;
     }
     .help {
         display: block;
@@ -1282,7 +1279,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 @media (min-width: 768px) {
     body {
-        border: 2px solid green;
+        //border: 2px solid green;
     }
     .collections {
         .collection {
@@ -1351,6 +1348,9 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
             top: 200px;
         }
     }
+    .not-front .interior {
+        background-position: left -200px;
+    }
 }
 
 
@@ -1366,7 +1366,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 @media (min-width: 992px) {
     body {
-        border: 2px solid pink;
+        //border: 2px solid pink;
     }
     .collection,
     .feature {
@@ -1463,7 +1463,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
 
 @media (min-width: 1440px) {
     body {
-        border: 3px solid red;
+        //border: 3px solid red;
     }
     .features,
     .news {
